fix some README and man doc wording errors

--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -867,7 +867,7 @@ Matches one character not a,b,c,d,e,/.
 .IP \fB[!abc-e]\fR
 Matches one character not a,b,c,d,e,/.
 .IP \fB/\fR
-When used at the begin of a glob, matches if pathname has no /.
+When used at the beginning of a glob, matches if pathname has no /.
 When used at the end of a glob, matches directories only.
 .IP \fB**/\fR
 Matches zero or more directories.
