--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "May 10, 2022" "ugrep 3.7.11" "User Commands"
+.TH UGREP "1" "May 29, 2022" "ugrep 3.8.0" "User Commands"
 .SH NAME
 \fBugrep\fR, \fBug\fR -- file pattern searcher
 .SH SYNOPSIS
@@ -14,14 +14,16 @@ input lines if the RE in the pattern matches one or more newlines in the input.
 An empty pattern matches every line.  Each input line that matches at least one
 of the patterns is written to the standard output.
 .PP
+The \fBug\fR command is intended for interactive searching, using a .ugrep
+configuration file located in the working directory or home directory, see
+CONFIGURATION.  \fBug\fR is equivalent to \fBugrep --config\fR and sorts files
+by name by default.
+.PP
 \fBugrep\fR accepts input of various encoding formats and normalizes the output
 to UTF-8.  When a UTF byte order mark is present in the input, the input is
 automatically normalized; otherwise, \fBugrep\fR assumes the input is ASCII,
 UTF-8, or raw binary.  An input encoding format may be specified with option
 \fB--encoding\fR.
-.PP
-The \fBug\fR command is equivalent to \fBugrep --config\fR to load the default
-configuration file, which allows for customization, see CONFIGURATION.
 .PP
 If no \fIFILE\fR arguments are specified and standard input is read from a
 terminal, recursive searches are performed as if \fB-R\fR is specified.  To
@@ -29,7 +31,7 @@ force reading from standard input, specify `-' as a \fIFILE\fR argument.
 .PP
 Directories specified as \fIFILE\fR arguments are searched without recursing
 into subdirectories, unless \fB-R\fR, \fB-r\fR, or \fB-2\fR...\fB-9\fR is
-specified.
+specified to search subdirectories.
 .PP
 Hidden files and directories are ignored in recursive searches.  Option
 \fB-.\fR (\fB--hidden\fR) includes hidden files and directories in recursive
@@ -38,7 +40,7 @@ searches.
 A query interface is opened with \fB-Q\fR (\fB--query\fR) to interactively
 specify search patterns and view search results.  Note that a \fIPATTERN\fR
 argument cannot be specified in this case.  To specify one or more patterns
-with \fB-Q\fR, use \fB-e PATTERN\fR.
+with \fB-Q\fR to start searching, use \fB-e PATTERN\fR.
 .PP
 Option \fB-f FILE\fR matches patterns specified in \fBFILE\fR.  If \fBFILE\fR
 is large and defines complex regular expression patterns, then option \fB-P\fR
@@ -47,14 +49,16 @@ is large and defines complex regular expression patterns, then option \fB-P\fR
 \fBugrep --help \fIWHAT\fR displays help on options related to \fIWHAT\fR;
 \fB--help format\fR displays help on \fB--format\fR and \fB--replace\fR
 formatting; \fB--help regex\fR displays help on regular expression syntax and
-conventions; \fB--help globs\fR displays help on glob patterns.
+conventions; \fB--help globs\fR displays help on glob patterns to select files
+to search; \fB--help fuzzy\fR displays help on fuzzy (approximate) searching.
 .PP
 The following options are available:
 .TP
 \fB\-A\fR \fINUM\fR, \fB\-\-after\-context\fR=\fINUM\fR
-Print NUM lines of trailing context after matching lines.  Places
-a \fB\-\-group\-separator\fR between contiguous groups of matches.  See also
-options \fB\-B\fR, \fB\-C\fR and \fB\-y\fR.
+Output NUM lines of trailing context after matching lines.  Places
+a \fB\-\-group\-separator\fR between contiguous groups of matches.  If \fB\-o\fR is
+specified, output the match with context to fit NUM columns after
+the match or shortening the match.  See also options \fB\-B\fR, \fB\-C\fR and \fB\-y\fR.
 .TP
 \fB\-a\fR, \fB\-\-text\fR
 Process a binary file as if it were text.  This is equivalent to
@@ -62,7 +66,7 @@ the \fB\-\-binary\-files\fR=text option.  This option might output binary
 garbage to the terminal, which can have problematic consequences if
 the terminal driver interprets some of it as commands.
 .TP
-\fB\-\-and\fR [[\fB\-e\fR] PATTERN] ... \fB\-e\fR \fIPATTERN\fR
+\fB\-\-and\fR [\fB\-e\fR] PATTERN ... \fB\-e\fR \fIPATTERN\fR
 Specify additional patterns to match.  Patterns must be specified
 with \fB\-e\fR.  Each \fB\-e\fR \fIPATTERN\fR following this option is considered an
 alternative pattern to match, i.e. each \fB\-e\fR is interpreted as an OR
@@ -72,13 +76,14 @@ alternations that bind more tightly together than \fB\-\-and\fR.  Option
 \fB\-\-stats\fR displays the search patterns applied.  See also options
 \fB\-\-not\fR, \fB\-\-andnot\fR, \fB\-\-bool\fR, \fB\-\-files\fR and \fB\-\-lines\fR.
 .TP
-\fB\-\-andnot\fR [[\fB\-e\fR] PATTERN] ...
+\fB\-\-andnot\fR [\fB\-e\fR] PATTERN
 Combines \fB\-\-and\fR \fB\-\-not\fR.  See also options \fB\-\-and\fR, \fB\-\-not\fR and \fB\-\-bool\fR.
 .TP
 \fB\-B\fR \fINUM\fR, \fB\-\-before\-context\fR=\fINUM\fR
-Print NUM lines of leading context before matching lines.  Places
-a \fB\-\-group\-separator\fR between contiguous groups of matches.  See also
-options \fB\-A\fR, \fB\-C\fR and \fB\-y\fR.
+Output NUM lines of leading context before matching lines.  Places
+a \fB\-\-group\-separator\fR between contiguous groups of matches.  If \fB\-o\fR is
+specified, output the match with context to fit NUM columns before
+the match or shortening the match.  See also options \fB\-A\fR, \fB\-C\fR and \fB\-y\fR.
 .TP
 \fB\-b\fR, \fB\-\-byte\-offset\fR
 The offset in bytes of a matched line is displayed in front of the
@@ -115,7 +120,7 @@ literally as strings.  For example, \fB\-\-bool\fR 'A "AND"|"OR"' matches
 lines with `A' and also either `AND' or `OR'.  Parenthesis are used
 for grouping.  For example, \fB\-\-bool\fR '(A B)|C' matches lines with `A'
 and `B', or lines with `C'.  Note that all subpatterns in a Boolean
-query pattern are regular expressions, unless option \fB\-F\fR is used.
+query pattern are regular expressions, unless \fB\-F\fR is specified.
 Options \fB\-E\fR, \fB\-F\fR, \fB\-G\fR, \fB\-P\fR and \fB\-Z\fR can be combined with \fB\-\-bool\fR to match
 subpatterns as strings or regular expressions (\fB\-E\fR is the default.)
 This option does not apply to \fB\-f\fR \fIFILE\fR patterns.  Option \fB\-\-stats\fR
@@ -126,9 +131,11 @@ displays the search patterns applied.  See also options \fB\-\-and\fR,
 Adds a line break between results from different files.
 .TP
 \fB\-C\fR \fINUM\fR, \fB\-\-context\fR=\fINUM\fR
-Print NUM lines of leading and trailing context surrounding each
-match.  Places a \fB\-\-group\-separator\fR between contiguous groups of
-matches.  See also options \fB\-A\fR, \fB\-B\fR and \fB\-y\fR.
+Output NUM lines of leading and trailing context surrounding each
+matching line.  Places a \fB\-\-group\-separator\fR between contiguous
+groups of matches.  If \fB\-o\fR is specified, output the match with
+context to fit NUM columns before and after the match or shortening
+the match.  See also options \fB\-A\fR, \fB\-B\fR and \fB\-y\fR.
 .TP
 \fB\-c\fR, \fB\-\-count\fR
 Only a count of selected lines is written to standard output.
@@ -302,11 +309,11 @@ is invoked.  This option may be repeated.
 \fB\-\-format\fR=\fIFORMAT\fR
 Output FORMAT\-formatted matches.  For example \fB\-\-format\fR='%f:%n:%O%~'
 outputs matching lines `%O' with filename `%f` and line number `%n'
-followed by a newline `%~'.  When option \fB\-P\fR is used, FORMAT may
-include `%1' to `%9', `%[\fINUM\fR]#' and `%[\fINAME\fR]#' to output group
-captures.  A `%%' outputs `%'.  See `ugrep \fB\-\-help\fR format' and `man
-ugrep' section FORMAT for details.  Context options \fB\-A\fR, \fB\-B\fR, \fB\-C\fR and
-\fB\-y\fR are ignored.
+followed by a newline `%~'.  If \fB\-P\fR is specified, FORMAT may include
+`%1' to `%9', `%[\fINUM\fR]#' and `%[\fINAME\fR]#' to output group captures.  A
+`%%' outputs `%'.  See `ugrep \fB\-\-help\fR format' and `man ugrep'
+section FORMAT for details.  Context options \fB\-A\fR, \fB\-B\fR, \fB\-C\fR and \fB\-y\fR are
+ignored.
 .TP
 \fB\-\-free\-space\fR
 Spacing (blanks and tabs) in regular expressions are ignored.
@@ -536,11 +543,11 @@ each `ext' in EXTENSIONS.  When an `ext' is preceded by a `!' or a
 with options \fB\-g\fR, \fB\-M\fR and \fB\-t\fR to expand the recursive search.
 .TP
 \fB\-o\fR, \fB\-\-only\-matching\fR
-Print only the matching part of lines.  When multiple lines match,
-the line numbers with option \fB\-n\fR are displayed using `|' as the
-field separator for each additional line matched by the pattern.
-If \fB\-u\fR is specified, ungroups multiple matches on the same line.
-This option cannot be combined with options \fB\-A\fR, \fB\-B\fR, \fB\-C\fR, \fB\-v\fR and \fB\-y\fR.
+Output only the matching part of lines.  If \fB\-b\fR, \fB\-k\fR or \fB\-u\fR is
+specified, output each match on a separate line.  When multiple
+lines match a pattern, output the matching lines with `|' as the
+field separator.  If \fB\-A\fR, \fB\-B\fR or \fB\-C\fR is specified, fits the match and
+its context on a line within the specified number of columns.
 .TP
 \fB\-\-only\-line\-number\fR
 The line number of the matching line in the file is output without
@@ -610,8 +617,8 @@ option \fB\-\-sort\fR.
 .TP
 \fB\-\-replace\fR=\fIFORMAT\fR
 Replace matching patterns in the output by the specified FORMAT
-with `%' fields.  When option \fB\-P\fR is used, FORMAT may include `%1'
-to `%9', `%[\fINUM\fR]#' and `%[\fINAME\fR]#' to output group captures.  A `%%'
+with `%' fields.  If \fB\-P\fR is specified, FORMAT may include `%1' to
+`%9', `%[\fINUM\fR]#' and `%[\fINAME\fR]#' to output group captures.  A `%%'
 outputs `%' and `%~' outputs a newline.  See option \fB\-\-format\fR,
 `ugrep \fB\-\-help\fR format' and `man ugrep' section FORMAT for details.
 .TP
@@ -634,16 +641,17 @@ number, byte offset and the matched line.  The default is a colon
 .TP
 \fB\-\-sort\fR[=\fIKEY\fR]
 Displays matching files in the order specified by KEY in recursive
-searches.  KEY can be `name' to sort by pathname (default), `best'
-to sort by best match with option \fB\-Z\fR (sort by best match requires
-two passes over files, which is expensive), `size' to sort by file
-size, `used' to sort by last access time, `changed' to sort by last
-modification time and `created' to sort by creation time.  Sorting
-is reversed with `rname', `rbest', `rsize', `rused', `rchanged', or
-`rcreated'.  Archive contents are not sorted.  Subdirectories are
-sorted and displayed after matching files.  FILE arguments are
-searched in the same order as specified.  Normally ugrep displays
-matches in no particular order to improve performance.
+searches.  Normally the ug command sorts by name whereas the ugrep
+batch command displays matches in no particular order to improve
+performance.  The sort KEY can be `name' to sort by pathname
+(default), `best' to sort by best match with option \fB\-Z\fR (sort by
+best match requires two passes over files, which is expensive),
+`size' to sort by file size, `used' to sort by last access time,
+`changed' to sort by last modification time and `created' to sort
+by creation time.  Sorting is reversed with `rname', `rbest',
+`rsize', `rused', `rchanged', or `rcreated'.  Archive contents are
+not sorted.  Subdirectories are sorted and displayed after matching
+files.  FILE arguments are searched in the same order as specified.
 .TP
 \fB\-\-stats\fR
 Output statistics on the number of files and directories searched
@@ -723,6 +731,11 @@ specified.  If a PATTERN is specified, or \fB\-e\fR \fIPATTERN\fR or \fB\-N\fR \
 then this option has no effect on \fB\-f\fR \fIFILE\fR patterns to allow \fB\-f\fR \fIFILE\fR
 patterns to narrow or widen the scope of the PATTERN search.
 .TP
+\fB\-\-width\fR[=\fINUM\fR]
+Truncate the output to NUM visible characters per line.  The width
+of the terminal window is used if NUM is not specified.  Note that
+double wide characters in the input may result in wider lines.
+.TP
 \fB\-X\fR, \fB\-\-hex\fR
 Output matches in hexadecimal.  This option is equivalent to the
 \fB\-\-binary\-files\fR=hex option with \fB\-\-hexdump\fR=2C.  To omit the matching
@@ -761,8 +774,10 @@ lines are output with the lowest cost per file.  Option \fB\-Z\fRbest
 requires two passes over a file and cannot be used with standard
 input or Boolean queries.  Option \fB\-\-sort\fR=best orders matching files
 by best match.  The first character of an approximate match always
-matches the start of a pattern.  Option \fB\-U\fR applies fuzzy matching
-to bytes.  No whitespace may be given between \fB\-Z\fR and its argument.
+matches a character at the beginning of the pattern.  To fuzzy
+match the first character, replace it with a `.' or `.?'.  Option
+\fB\-U\fR applies fuzzy matching to ASCII and bytes instead of Unicode
+text.  No whitespace may be given between \fB\-Z\fR and its argument.
 .TP
 \fB\-z\fR, \fB\-\-decompress\fR
 Decompress files to search, when compressed.  Archives (.cpio,
@@ -790,7 +805,7 @@ range from 1 to 99 for up to 99 decompression and de\-archiving
 steps.  Increasing NUM values gradually degrades performance.
 .TP
 \fB\-0\fR, \fB\-\-null\fR
-Prints a zero\-byte (NUL) after the file name.  This option can be
+Output a zero\-byte (NUL) after the file name.  This option can be
 used with commands such as `find \fB\-p\fRrint0' and `xargs \fB\-0\fR' to process
 arbitrary file names.
 .PP
@@ -1166,9 +1181,9 @@ Count the number of words `patricia', ignoring case:
 .IP
 $ ugrep -cowi patricia myfile.txt
 .PP
-List lines with both `amount' and a decimal number, ignoring case:
+List lines with `amount' and a decimal, ignoring case (space is AND):
 .IP
-$ ugrep -wi --bool 'amount \d+(\.\d+)?' myfile.txt
+$ ugrep -i --bool 'amount \d+(\.\d+)?' myfile.txt
 .PP
 Alternative query:
 .IP
@@ -1195,6 +1210,12 @@ search, with one line of context before and after a matched line:
 .IP
 $ ugrep -C1 -R -n -k -tc++ FIXME
 .PP
+Display the line and column number of `FIXME' in long Javascript files using
+recursive search, showing only matches with up to 10 characters of context
+before and after:
+.IP
+$ ugrep -o -C20 -R -n -k -tjs FIXME
+.PP
 List the C/C++ comments in a file with line numbers:
 .IP
 $ ugrep -n -e '//.*' -e '/\\*([^*]|(\\*+[^*/]))*\\*+\\/' myfile.cpp
@@ -1212,22 +1233,34 @@ The same, but using predefined pattern cpp/zap_strings:
 .IP
 $ ugrep -e FIXME -f cpp/zap_strings myfile.cpp
 .PP
-Find lines with `FIXME' or `TODO':
+Find lines with `FIXME' or `TODO', showing line numberes:
 .IP
 $ ugrep -n -e FIXME -e TODO myfile.cpp
 .PP
-Find lines with `FIXME' that also contain the word `urgent':
+Find lines with `FIXME' that also contain `urgent':
 .IP
-$ ugrep -n FIXME myfile.cpp | ugrep -w urgent
+$ ugrep -n -e FIXME --and urgent myfile.cpp
 .PP
-Find lines with `FIXME' but not the word `later':
+The same, but with a Boolean query pattern (a space is AND):
 .IP
-$ ugrep -n FIXME myfile.cpp | ugrep -v -w later
+$ ugrep -n --bool 'FIXME urgent' myfile.cpp
+.PP
+Find lines with `FIXME' that do not also contain `later':
+.IP
+$ ugrep -n -e FIXME --andnot later myfile.cpp
+.PP
+The same, but with a Boolean query pattern (a space is AND, - is NOT):
+.IP
+$ ugrep -n --bool 'FIXME -later' myfile.cpp
 .PP
 Output a list of line numbers of lines with `FIXME' but not `later':
 .IP
-$ ugrep -n FIXME myfile.cpp | ugrep -vw later | 
-  ugrep -P '^(\\d+)' --format='%,%n'
+$ ugrep -e FIXME --andnot later --format='%,%n' myfile.cpp
+.PP
+Recursively list all files with both `FIXME' and `LICENSE' anywhere in the
+file, not necessarily on the same line:
+.IP
+$ ugrep -l --files --bool 'FIXME LICENSE'
 .PP
 Find lines with `FIXME' in the C/C++ files stored in a tarball:
 .IP
@@ -1276,7 +1309,7 @@ Display all words in a MacRoman-encoded file that has CR newlines:
 .IP
 $ ugrep --encoding=MACROMAN '\\w+' mac.txt
 .PP
-Display all options related to "fuzzy" searching:
+Display options related to "fuzzy" searching:
 .IP
 $ ugrep --help fuzzy
 .SH BUGS
