--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "May 29, 2022" "ugrep 3.8.0" "User Commands"
+.TH UGREP "1" "June 06, 2022" "ugrep 3.8.1" "User Commands"
 .SH NAME
 \fBugrep\fR, \fBug\fR -- file pattern searcher
 .SH SYNOPSIS
@@ -580,7 +580,7 @@ and \fB\-\-line\-buffered\fR.
 .TP
 \fB\-\-pretty\fR
 When output is sent to a terminal, enables \fB\-\-color\fR, \fB\-\-heading\fR, \fB\-n\fR,
-\fB\-\-sort\fR and \fB\-T\fR when not explicitly disabled or set.
+\fB\-\-sort\fR and \fB\-T\fR when not explicitly disabled.
 .TP
 \fB\-Q\fR[\fIDELAY\fR], \fB\-\-query\fR[=\fIDELAY\fR]
 Query mode: user interface to perform interactive searches.  This
